# py-cmdcolor

./: LICENSE  README.md  setup.cfg
src/: cmdcolor.py
