[metadata]
name = cmdcolor
version = 1.1.0
license = MIT
description = 16-color console support
long_description = file: README.md, LICENSE
author = Roeland Schoukens
classifiers=
    Programming Language :: Python :: 3
    Development Status :: 6 - Mature
    Environment :: Console

[options]
py_modules = 
    cmdcolor
package_dir =
    =src
